kubernetes/apps/rancher/manifest/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: cattle-system
  labels:
    app.kubernetes.io/name: rancher
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - rancher.yuriy-lab.cloud
    secretName: rancher-tls
  rules:
    - host: "rancher.yuriy-lab.cloud"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 80
